k8s/infra/manifests/flink-dev.yaml
---
# -----------------------------------------------------
# Flink JobManager (The Master)
# -----------------------------------------------------
apiVersion: v1
kind: Service
metadata:
  name: flink-jobmanager
  namespace: infra
spec:
  ports:
    - name: rpc
      port: 6123
    - name: blob
      port: 6124
    - name: ui
      port: 8081
  selector:
    app: flink
    component: jobmanager

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flink-jobmanager
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flink
      component: jobmanager
  template:
    metadata:
      labels:
        app: flink
        component: jobmanager
      annotations:
        linkerd.io/inject: enabled
        prometheus.io/scrape: "true"
        prometheus.io/port: "4191"
    spec:
      containers:
        - name: jobmanager
          image: flink:1.18.1-java11
          args: ["jobmanager"]
          ports:
            - containerPort: 6123
              name: rpc
            - containerPort: 6124
              name: blob
            - containerPort: 8081
              name: ui
          resources:
            requests:
              memory: "512Mi"
            limits:
              memory: "1Gi"

---
# -----------------------------------------------------
# Flink TaskManager (The Worker)
# -----------------------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flink-taskmanager
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flink
      component: taskmanager
  template:
    metadata:
      labels:
        app: flink
        component: taskmanager
      annotations:
        linkerd.io/inject: enabled
        prometheus.io/scrape: "true"
        prometheus.io/port: "4191"
    spec:
      containers:
        - name: taskmanager
          image: flink:1.18.1-java11
          args: ["taskmanager"]
          resources:
            requests:
              memory: "1Gi"
            limits:
              memory: "2Gi"
