k8s/infra/manifests/redis-stack.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  namespace: infra
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: master

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-master
  namespace: infra
spec:
  serviceName: redis-master
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
      app.kubernetes.io/component: master
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
        app.kubernetes.io/component: master
    spec:
      containers:
        - name: redis
          image: redis/redis-stack-server:7.2.0-v6
          imagePullPolicy: IfNotPresent
          ports:
            - name: redis
              containerPort: 6379
          resources:
            limits:
              memory: 256Mi
            requests:
              memory: 128Mi
          volumeMounts:
            - name: redis-data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
