k8s/infra/manifests/flink-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flink-ui
  namespace: infra
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: flink.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flink-jobmanager
                port:
                  number: 8081
